Update run_sql endpoint to return query editor link
