# local_server/main.py
@@ -7,15 +7,15 @@ from fastapi import FastAPI, HTTPException, Response
 from starlette.responses import FileResponse
 
 from fastapi.middleware.cors import CORSMiddleware
-from splitgraph_chatgpt_plugin.config import get_openai_api_key, get_db_connection_string
-from splitgraph_chatgpt_plugin.models import FindRelevantTablesResponse
+from splitgraph_chatgpt_plugin.config import DOCUMENT_COLLECTION_NAME, get_openai_api_key, get_db_connection_string
+from splitgraph_chatgpt_plugin.ddn import run_sql
+from splitgraph_chatgpt_plugin.models import FindRelevantTablesResponse, RunSQLResponse
 
 from splitgraph_chatgpt_plugin.persistence import get_embedding_store
 from splitgraph_chatgpt_plugin.query import generate_full_response
 import pprint
 
 app = FastAPI()
-collection = "repository_embeddings"
 PORT = 3333
 
 origins = [
@@ -52,12 +52,11 @@ async def get_openapi(request):
     return FileResponse(file_path, media_type="text/json")
 
 
-@app.get("/findRelevantTables", response_model=FindRelevantTablesResponse)
+@app.get("/find_relevant_tables", response_model=FindRelevantTablesResponse)
 async def query_main(prompt: str|None=None):
     global vstore
     try:
         response = generate_full_response(prompt, vstore)
-        pprint.pprint(response)
         return response
     except Exception as e:
         import traceback
@@ -65,12 +64,23 @@ async def query_main(prompt: str|None=None):
         raise HTTPException(status_code=500, detail="Internal Service Error")
 
 
+@app.get("/run_sql", response_model=RunSQLResponse)
+async def query_main(query: str|None=None):
+    global vstore
+    try:
+        response = run_sql(query)
+        return response
+    except Exception as e:
+        import traceback
+        print(traceback.format_exc())
+        raise HTTPException(status_code=500, detail="Internal Service Error")
+
 @app.on_event("startup")
 async def startup():
     global openai_api_key
     global vstore
     openai_api_key = get_openai_api_key()
-    vstore = get_embedding_store(collection, get_db_connection_string(), openai_api_key)
+    vstore = get_embedding_store(DOCUMENT_COLLECTION_NAME, get_db_connection_string(), openai_api_key)
 
 
 def start():
