# local_server/openapi.json
@@ -11,9 +11,9 @@
     ]
   },
   "paths": {
-    "/findRelevantTables": {
+    "/find_relevant_tables": {
       "get": {
-        "operationId": "findRelevantTables",
+        "operationId": "find_relevant_tables",
         "summary": "Find tables in the Splitgraph Data Delivery Network relevant to the user's prompt.",
         "description": "Accepts search query objects array each with query. Break down complex questions into sub-questions. Refine results by criteria, e.g. time / source, don't do this often. Split queries if ResponseTooLargeError occurs.",
         "responses": {
@@ -36,6 +36,39 @@
             "name": "prompt",
             "in": "query",
             "description": "the input prompt from the user",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/run_sql": {
+      "get": {
+        "operationId": "run_sql",
+        "summary": "Execute SQL queries on the Splitgraph Data Delivery Network",
+        "description": "Accepts a SQL query to execute on the Splitgraph Data Delivery Network",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RunSQLResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error"
+          }
+        },
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "The SQL query to execute on the Splitgraph Data Deliery Network",
             "required": true,
             "schema": {
               "type": "string"
@@ -85,6 +118,19 @@
           "postgresql_type": {"type": "string"},
           "is_primary_key": {"type": "boolean"},
           "comment": {"type": "string"}
+        }
+      },
+      "RunSQLResponse": {
+        "title": "RunSQLResponse",
+        "type": "object",
+        "required": [],
+        "properties": {
+          "query_editor_url": {"type": "string"},
+          "error": {"type": "string"},
+          "rows": {
+            "type": "array",
+            "items": {}
+          }
         }
       }
     }
