# splitgraph_chatgpt_plugin/ddn.py
@@ -5,7 +5,9 @@ import requests
 from pydantic import parse_obj_as
 from pglast import prettify
 
-from .models import DDNResponse, DDNResponseFailure, RepositoryInfo, TableColumn, TableInfo
+from .config import SPLITGRAPH_WWW_URL_PREFIX
+
+from .models import DDNResponse, DDNResponseFailure, RepositoryInfo, RunSQLResponse, TableColumn, TableInfo
 import itertools
 
 
@@ -156,3 +158,14 @@ def prettify_sql(sql: str) -> str:
 
 def get_table_infos(repositories: List[Tuple[str, str]], use_fully_qualified_table_names=False) -> List[TableInfo]:
     return list(itertools.chain(*[get_repo_tables(namespace, repository, use_fully_qualified_table_names) for namespace, repository in repositories]))
+
+def get_query_editor_url(sql: str) -> str:
+    import urllib.parse
+
+    return f"{SPLITGRAPH_WWW_URL_PREFIX}query?sqlQuery={urllib.parse.quote_plus(sql)}"
+
+def run_sql(query: str)->RunSQLResponse:
+    ddn_response = ddn_query(query)
+    if isinstance(ddn_response, DDNResponseFailure):
+        return RunSQLResponse(error=ddn_response.error, query_editor_url=get_query_editor_url(query))
+    return RunSQLResponse(rows=ddn_response.rows, query_editor_url=get_query_editor_url(query))
